syntax = "proto3";

//编译指令: protoc --go_out=. 文件名

package proto;

enum UserStatus {
    OFFLINE = 0;
    ONLINE = 1;
}

message UserInfo {
    int32 id = 1;
    string name = 2;
    UserStatus status = 3 ;
}

